fixed the learn more btn's overflowing problem

--- a/css/queries.css
+++ b/css/queries.css
@@ -291,7 +291,8 @@ instead 1rem = 1em = 16px */
   }
 
   .learn-more{
-    padding: 1.6rem 2.8rem !important;
+    display: inline-block;
+    margin-top: 30px;
   }
 }
 
